--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h3 style="color:#FFE77AFF;">Welcome to Recydome</h3>
                 <h1 style="font-size:80px;"> We are a creative group <br> of people who gather textile waste <br> and turn them into beautiful <br> reusable
                     products.</h1>
-                <div class="home-content__buttons"> <a href="#contact" class="smoothscroll btn btn--stroke">Affiliate </a> <a href="#about" class="smoothscroll btn btn--stroke"> More About Us </a></div>
+                <div class="home-content__buttons"> <a href="#contact" class="smoothscroll btn btn--stroke">Affiliate </a> <a href="#about" class="smoothscroll btn btn--stroke"> Make A Donation </a></div>
             </div>
             <div class="home-content__scroll"> <a href="#about" class="scroll-link smoothscroll"> <span>Scroll
                         Down</span> </a></div>
