changed the logo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body id="top">
     <header class="s-header">
-        <div class="header-logo"> <a class="site-logo" href="index.html"> <img src="images/Recydome Logo.png"
+        <div class="header-logo"> <a class="site-logo" href="index.html"> <img src="images/Recydome Logo 22.png"
                     alt="Homepage" width="300px"> </a></div>
         <nav class="header-nav"><a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
             <div class="header-nav__content">
