modified the header section and added links

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="home-content">
             <div class="row home-content__main">
                 <h3 style="color:#FFE77AFF;">Welcome to Recydome</h3>
-                <h1> We are a creative group <br> of people who gather textile waste <br> and turn them into beautiful <br> reusable
+                <h1> We are a group of creative <br> people who gather textile waste <br> and turn them into beautiful <br> reusable
                     products.</h1>
                 <div class="home-content__buttons"> <a href="#contact" class="smoothscroll btn btn--stroke">Affiliate </a> <a href="#about" class="smoothscroll btn btn--stroke"> Make A Donation </a></div>
             </div>
@@ -66,11 +66,11 @@
             <div class="home-content__line"></div>
         </div>
         <ul class="home-social">
-            <li> <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a></li>
-            <li> <a href="#0"><i class="fa fa-twitter" aria-hidden="true"></i><span>Twiiter</span></a></li>
-            <li> <a href="#0"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a></li>
-            <li> <a href="#0"><i class="fa fa-behance" aria-hidden="true"></i><span>Behance</span></a></li>
-            <li> <a href="#0"><i class="fa fa-dribbble" aria-hidden="true"></i><span>Dribbble</span></a></li>
+            <li> <a href="https://www.facebook.com/profile.php?id=100087482352278"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a></li>
+            <li> <a href="https://www.facebook.com/profile.php?id=100087482352278"><i class="fa fa-twitter" aria-hidden="true"></i><span>Twiiter</span></a></li>
+            <li> <a href="https://www.facebook.com/profile.php?id=100087482352278"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a></li>
+            <li> <a href="https://www.facebook.com/profile.php?id=100087482352278"><i class="fa fa-behance" aria-hidden="true"></i><span>Behance</span></a></li>
+            <li> <a href="https://www.facebook.com/profile.php?id=100087482352278"><i class="fa fa-dribbble" aria-hidden="true"></i><span>Dribbble</span></a></li>
         </ul>
     </section>
     <section id='about' class="s-about">
