--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                                 class="testimonials__pos">Apprentice, Emejiaka</span></div>
                     </div>
                     <div class="testimonials__slide">
-                        <p>For a long time now, the issue of disposing waste from m fashion house has always been big problem. Now, it's easier to discard those waste than burn them</p><img
+                        <p>For a long time now, the issue of disposing waste from my fashion house has always been big problem. Now, it's easier to discard those waste than burn them</p><img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTF2UKY0Fm3P5e657R8h8x7a9ZsoU4UGZ8wLA&usqp=CAU" alt="Author image"
                             class="testimonials__avatar">
                         <div class="testimonials__info"> <span class="testimonials__name">Odogwu Caftan</span> <span
